--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <div class="iconImg"><i class="fas fa-book"></i></div>
             </a>
         </div>
+        <div>skill</div>
 
     </div>
 </body>
