--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body id="wrap">
     <div id="mainWrap">
         <h1 class="title">박선영</h1>
-        <div id="imgWrap">
+        <div id="iconWrap">
             <a href="https://github.com/suny1031">
                 <div class="iconImg"><i class="fab fa-github"></i></div>
             </a>
@@ -21,8 +21,12 @@
                 <div class="iconImg"><i class="fas fa-book"></i></div>
             </a>
         </div>
-        <div>skill</div>
+        <div id="intWrap">
+            <div id="intTitle">About me</div>
+            <div>안녕하세요. 주니어 Back-End 개발자 박선영입니다.</div>
+            <div>안녕하세요. 주니어 Back-End 개발자 박선영입니다.</div>
 
+        </div>
     </div>
 </body>
 
