--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
             <div id="intTitle">About me</div>
             <div>안녕하세요. 주니어 Back-End 개발자 박선영입니다.</div>
             <div>안녕하세요. 주니어 Back-End 개발자 박선영입니다.</div>
-
+        </div>
+        <div id="stackWrap">
+            <div>Back-End Stack</div>
+            <div class="stackBr"></div>
         </div>
     </div>
 </body>
