이미지 추가
자바스크립트 이미지 추가

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         <div id="stackWrap">
             <div>Back-End Stack</div>
             <div class="stackBr"></div>
+            <div id="stackImg"></div>
+
+            <div id="javaSImg"><img src="img/javasc.png"></div>
         </div>
     </div>
 </body>
