이미지 추가
스프링 이미지 추가, 이미지 사이즈 수정

--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
         <div id="stackWrap">
             <div>Back-End Stack</div>
             <div class="stackBr"></div>
-            <div id="stackImg"></div>
 
-            <div id="javaSImg"><img src="img/javasc.png"></div>
+            <div><img class="stackImg" src="img/javasc.png">
+                <img class="stackImg" src="img/spring.png">
+            </div>
         </div>
     </div>
 </body>
