이미지 추가
마이바티스 이미지 추가

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
             <div><img class="stackImg" src="img/javasc.png">
                 <img class="stackImg" src="img/spring.png">
+                <img class="stackImg" src="img/mybatis.jpg">
             </div>
         </div>
     </div>
