이미지 추가
jQuery이미지 추가

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             <div><img class="stackImg" src="img/javasc.png">
                 <img class="stackImg" src="img/spring.png">
                 <img class="stackImg" src="img/mybatis.jpg">
+                <img class="stackImg" src="img/jquery.png">
+
             </div>
         </div>
     </div>
