이미지 추가
Spring Boot 이미지 추가

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <img class="stackImg" src="img/spring.png">
                 <img class="stackImg" src="img/mybatis.jpg">
                 <img class="stackImg" src="img/jquery.png">
+                <img class="stackImg" src="img/boot.jpg">
 
             </div>
         </div>
