--- a/index.html
+++ b/index.html
@@ -43,8 +43,15 @@
             <div class="stackBr"></div>
 
             <div><img class="stackImg" src="img/oracle.PNG">
+            </div>
 
 
+            <div>Front-End Stack</div>
+            <div class="stackBr"></div>
+
+            <div><img class="stackImg" src="img/html.png">
+                <img class="stackImg" src="img/css.png">
+                <img class="stackImg" src="img/js.png">
             </div>
 
         </div>
