--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@
                 <img class="stackImg" src="img/js.png">
             </div>
 
+            <div>Front-End Stack</div>
+            <div class="stackBr"></div>
+
+            <div><img class="stackImg" src="img/html.png">
+                <img class="stackImg" src="img/css.png">
+                <img class="stackImg" src="img/js.png">
+            </div>
+
+
         </div>
     </div>
 </body>
