--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <img class="stackImg" src="img/js.png">
             </div>
 
-            <div>Front-End Stack</div>
+            <div>Stack</div>
             <div class="stackBr"></div>
 
             <div><img class="stackImg" src="img/html.png">
