--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div id="intTitle">About me</div>
             <div>안녕하세요. 주니어 Back-End 개발자 박선영입니다.</div>
             <div>항상 새로운 기술에 적극적으로 도전합니다.</div>
-            <div>주로 JAVA를 사용하여 개발.</div>
+            <div>주로 JAVA를 사용하여 개발하는것을 좋아합니다.</div>
         </div>
         <div id="stackWrap">
             <div>Back-End Stack</div>
