형상 관리 추가

--- a/index.html
+++ b/index.html
@@ -55,12 +55,11 @@
                 <img class="stackImg" src="img/js.png">
             </div>
 
-            <div>Stack</div>
+            <div>Devops Stack</div>
             <div class="stackBr"></div>
 
-            <div><img class="stackImg" src="img/html.png">
-                <img class="stackImg" src="img/css.png">
-                <img class="stackImg" src="img/js.png">
+            <div>
+
             </div>
 
 
