타이핑 플러그인 수정

--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
     });
 
     typewriter.typeString('박선영')
-        .pauseFor(2500)
+        .pauseFor(1500)
         .deleteAll()
         .typeString('朴善英')
-        .pauseFor(2500)
-        .deleteChars(7)
+        .pauseFor(1500)
+        .deleteAll()
         .typeString('park sun young')
         .start();
 </script>
