--- a/index.html
+++ b/index.html
@@ -23,12 +23,11 @@
         </div>
         <div id="intWrap">
             <div id="intTitle">About me</div>
-            <div>안녕하세요. 주니어 Back-End 개발자 박선영입니다.</div>
+            <div>안녕하세요. 주니어 <div> 
+            <span style=" color: blue;" id="typing"></span>
+            <div> 개발자 박선영입니다. </div>
             <div>항상 새로운 기술에 적극적으로 도전합니다.</div>
-            <div>주로 JAVA를 사용하여 개발하는것을 좋아합니다.</div>
-            <SPAN style=" color: blue;" id="typing">
 
-            </span>
 
         </div>
         <div id="stackWrap">
@@ -80,7 +79,7 @@
         loop: true
     });
 
-    typewriter.typeString('박선영')
+    typewriter.typeString('Back-End')
         .pauseFor(1500)
         .deleteAll()
         .typeString('朴善英')
