이미지 추가
mariadb 이미지 추가

--- a/index.html
+++ b/index.html
@@ -23,48 +23,49 @@
         </div>
         <div id="intWrap">
             <div id="intTitle">About me</div>
-            <div>안녕하세요. 주니어 <div> 
-            <span style=" color: blue;" id="typing"></span>
-            <div> 개발자 박선영입니다. </div>
-            <div>항상 새로운 기술에 적극적으로 도전합니다.</div>
+            <div>안녕하세요. 주니어 <div>
+                    <span style=" color: blue;" id="typing"></span>
+                    <div> 개발자 박선영입니다. </div>
+                    <div>항상 새로운 기술에 적극적으로 도전합니다.</div>
 
 
-        </div>
-        <div id="stackWrap">
-            <div>Back-End Stack</div>
-            <div class="stackBr"></div>
+                </div>
+                <div id="stackWrap">
+                    <div>Back-End Stack</div>
+                    <div class="stackBr"></div>
 
-            <div><img class="stackImg" src="img/javasc.png">
-                <img class="stackImg" src="img/spring.png">
-                <img class="stackImg" src="img/mybatis.jpg">
-                <img class="stackImg" src="img/jquery.png">
-                <img class="stackImg" src="img/boot.png">
+                    <div><img class="stackImg" src="img/javasc.png">
+                        <img class="stackImg" src="img/spring.png">
+                        <img class="stackImg" src="img/mybatis.jpg">
+                        <img class="stackImg" src="img/jquery.png">
+                        <img class="stackImg" src="img/boot.png">
 
+                    </div>
+
+
+                    <div>DB Stack</div>
+                    <div class="stackBr"></div>
+
+                    <div><img class="stackImg" src="img/oracle.PNG">
+                        <img class="stackImg" src="img/mariadb.png">
+                    </div>
+
+
+                    <div>Front-End Stack</div>
+                    <div class="stackBr"></div>
+
+                    <div><img class="stackImg" src="img/html.png">
+                        <img class="stackImg" src="img/css.png">
+                        <img class="stackImg" src="img/js.png">
+                    </div>
+
+                    <div>
+
+                    </div>
+
+
+                </div>
             </div>
-
-
-            <div>DB Stack</div>
-            <div class="stackBr"></div>
-
-            <div><img class="stackImg" src="img/oracle.PNG">
-            </div>
-
-
-            <div>Front-End Stack</div>
-            <div class="stackBr"></div>
-
-            <div><img class="stackImg" src="img/html.png">
-                <img class="stackImg" src="img/css.png">
-                <img class="stackImg" src="img/js.png">
-            </div>
-
-            <div>
-
-            </div>
-
-
-        </div>
-    </div>
 </body>
 <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
