이미지 추가 mysql

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                     <div class="stackBr"></div>
 
                     <div><img class="stackImg" src="img/oracle.PNG">
+                        <img class="stackImg" src="img/mysql.png">
                         <img class="stackImg" src="img/mariadb.png">
                     </div>
 
